Update vendor deps
Signed-off-by: Nassim 'Nass' Eddequiouaq <eddequiouaq.nassim@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,3 +1,6 @@
 github.com/Sirupsen/logrus 5b60b3d3ee017ed00bcd0225fcca7acab767844b
-github.com/opencontainers/runtime-spec d974e9db4b0a5eccce91d9d48bb934c145400152
+github.com/davecgh/go-spew 346938d642f2ec3594ed81d874461961cd0faa76
+github.com/opencontainers/runtime-spec 1259a08e003658f8c4094a6bbc9f52aee29c95df
+github.com/pmezard/go-difflib 792786c7400a136282c1664665ae0a8db921c6c2
+github.com/stretchr/testify 4d4bfba8f1d1027c4fdbe371823030df51419987
 golang.org/x/sys 9ccfe848b9db8435a24c424abbc07a921adf1df5
