--- a/vendor.conf
+++ b/vendor.conf
@@ -1,6 +1,6 @@
-github.com/Sirupsen/logrus 5b60b3d3ee017ed00bcd0225fcca7acab767844b
+github.com/sirupsen/logrus v1.0.3
 github.com/davecgh/go-spew 346938d642f2ec3594ed81d874461961cd0faa76
-github.com/opencontainers/runtime-spec d42f1eb741e6361e858d83fc75aa6893b66292c4
+github.com/opencontainers/runtime-spec v1.0.0
 github.com/pmezard/go-difflib 792786c7400a136282c1664665ae0a8db921c6c2
 github.com/stretchr/testify 4d4bfba8f1d1027c4fdbe371823030df51419987
 golang.org/x/sys 9ccfe848b9db8435a24c424abbc07a921adf1df5
